--- a/login.html
+++ b/login.html
@@ -14,14 +14,15 @@
 	<div class="subtitulo">Área de autenticacão</div>
 	
 	<div class="entrada">
-		<form name="entrada" method="post" onsubmit="checkusr()">
+		<form name="entrada" method="post">
     			<input type="text" placeholder="Usuário" name="usuario">
     			<input type="password" placeholder="Senha" name="senha">
-     			<input type="submit" value="ENTRAR">
+     			<input type="button" value="ENTRAR" onclick="checkusr()">
      			<input type="checkbox" checked="checked" name="remember"> Lembrar?
 		</form>
 	</div>
 </div>
+<div id="Aviso"></div>
 </body>
 
 
