Adicionado aviso senha

--- a/login.html
+++ b/login.html
@@ -9,7 +9,6 @@
 
 <body>
 <div class="div-login">
-	
 	<div class="titulo">SISTEMA</div>
 	<div class="subtitulo">Área de autenticacão</div>
 	
@@ -17,7 +16,7 @@
 		<form name="entrada" method="post">
     			<input type="text" placeholder="Usuário" name="usuario">
     			<input type="password" placeholder="Senha" name="senha">
-     			<input type="button" value="ENTRAR" onclick="checkusr()">
+     			<input type="button" value="ENTRAR" onclick="validar()">
      			<input type="checkbox" checked="checked" name="remember"> Lembrar?
 		</form>
 	</div>
